[package]
name = "untitled"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
hex-literal = "0.3.3"
public-ip = "0.2.1"
tokio = { version = "~1.8", features = ["full"] }
mac_address = "1.1.2"

[profile.dev]
debug = true
opt-level = 0

